SERVER-42201 Fix namespace validation for MR cluster command